Description: > excel define Lognormdist function as > LOGNORMDIST(x,mean,standard_dev) > > ODFF > Syntax: LOGNORMDIST( Number x [ ; Number m = 0 [ ; Number s = 1 [ ; Logical > Cumulative = TRUE() ] ] ] ) > > Compare: 3 parameters in excel, 4 parameters in Calc > When I write formula =LOGNORMDIST(0.1,0,1,1) in Calc and export the file to > xlsx, then in excel is formula invalid (excel delete the formula and > preserve value) . todo: if 5 arguments are present the export should write LOGNORM.DIST instead of LOGNORMDIST. Actual Results: > When I write formula =LOGNORMDIST(0.1,0,1,1) in Calc and export the file to > xlsx, then in excel is formula invalid (excel delete the formula and > preserve value) . Expected Results: todo: if 5 arguments are present the export should write LOGNORM.DIST instead of LOGNORMDIST. Reproducible: Always User Profile Reset: No Additional Info: User-Agent: Mozilla/5.0 (Windows NT 6.1; rv:49.0) Gecko/20100101 Firefox/49.0
*** Bug 103089 has been marked as a duplicate of this bug. ***
(In reply to raal from comment #0) >[...] > todo: if 5 arguments are present the export should write LOGNORM.DIST > instead of LOGNORMDIST. >[...] 5 should be 4, ok? ODFF LOGNORMDIST : 4 arguments, 1 mandatory Excel LOGNORMDIST : 3 arguments, 3 mandatory Excel LOGNORM.DIST : 4 arguments, 4 mandatory
Winfried Donkers committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=1276e95193a714391c78120aadb0d347432eb35f tdf#103088, improve interoperability with Excel for LOGNORMDIST(). It will be available in 5.3.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello Winfried, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?
(In reply to Xisco Faulí from comment #4) > Hello Winfried, > Is this bug fixed? > If so, could you please close it as RESOLVED FIXED? Sorry for the delay...