tdf#103088, improve interoperability with Excel for LOGNORMDIST().

Change-Id: I5f4ccbb54b212247a3ff8b13ff012c930d18a86c